# resimulate

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  analyze_fuzzing.ipynb  estk_playground.ipynb  fuzz_playground.ipynb  get_challenge_playground.ipynb  initial_testing.ipynb  playground.ipynb  pyproject.toml  resimulate.py  test.pkl  test.trace  test_EuiccInfoScenario_DeterministicMutationEngine.resim
.gitea/scripts/: setup-poetry.sh
.gitea/workflows/: build.yml  publish.yml
.github/workflows/: build.yml  publish.yml
asn/: pe_definitions_v3_4.asn  pkix1_explicit_93.asn  rsp_definitions_v2_6.asn
recordings/: 5ber-test-2_ProfileDownloadScenario_DeterministicMutationEngine.resim  5ber-test-3_ProfileDownloadScenario_DeterministicMutationEngine.resim  5ber-test-5_ProfileDownloadScenario_DeterministicMutationEngine_IMPORTANT.resim  5ber.apdu  5ber_2.apdu  5ber_EuiccInfoScenario_DeterministicMutationEngine.resim  5ber_ProfileDownloadScenario_DeterministicMutationEngine.resim  5ber_active_profile.apdu  5ber_app_open.apdu  5ber_delete_profile.apdu  5ber_label.apdu  5ber_profile_provisioning.apdu  9esim-test-2_ProfileDownloadScenario_DeterministicMutationEngine.resim  9esim_EuiccInfoScenario_DeterministicMutationEngine.resim  9esim_ProfileDownloadScenario_DeterministicMutationEngine.resim  9esim_app_open.apdu  9esim_profile_disable.apdu  9esim_profile_enable.apdu  9esim_profile_provisioning.apdu  9esim_rename_profile.apdu  9esimv2_ProfileDownloadScenario_DeterministicMutationEngine.resim  eiotclub_ProfileDownloadScenario_DeterministicMutationEngine.resim  esim-me-test-10_ProfileDownloadScenario_DeterministicMutationEngine.resim  esim-me-test-11_ProfileDownloadScenario_DeterministicMutationEngine.resim  esim-me-test-12_ProfileDownloadScenario_DeterministicMutationEngine.resim  esim-me-test-13_ProfileDownloadScenario_DeterministicMutationEngine.resim  esim-me-test-2_ProfileDownloadScenario_DeterministicMutationEngine.resim  esim-me-test-3_ProfileDownloadScenario_DeterministicMutationEngine.resim  esim-me-test-4_ProfileDownloadScenario_DeterministicMutationEngine.resim  esim-me-test-5_ProfileDownloadScenario_DeterministicMutationEngine.resim  esim-me-test-6_ProfileDownloadScenario_DeterministicMutationEngine.resim  esim-me-test-6_ProfileDownloadScenario_RandomMutationEngine.resim  esim-me-test-7_ProfileDownloadScenario_DeterministicMutationEngine.resim  esim-me-test-8_ProfileDownloadScenario_DeterministicMutationEngine.resim  esim-me-test-9_ProfileDownloadScenario_DeterministicMutationEngine.resim  esim-me_EuiccInfoScenario_DeterministicMutationEngine.resim  esim-me_ProfileDownloadScenario_DeterministicMutationEngine.resim  esim_me.apdu  estk_stk_menu_open.apdu  estk_stk_stuff.apdu  (+10 more)
resimulate/: card.py  exceptions.py  legacy_card.py  legacy_pcsc_link.py  pcsc_link.py  recording.py  resimulate.py  tracer.py
resimulate/asn/: __init__.py  pkix1_explicit_88.asn  pkix1_implicit_88.asn  pkix1_implicit_93.asn  rsp_definitions_v2_2.asn  rsp_definitions_v2_6.asn  rsp_definitions_v3_1.asn
resimulate/cli/: __init__.py
resimulate/cli/fuzzer/: __init__.py  apdu_fuzz.py
resimulate/cli/lpa/: __init__.py  euicc.py  profile.py
resimulate/cli/trace/: __init__.py  record.py  replay.py
resimulate/commands/: record.py  replay.py
resimulate/commands/fuzzer/: __init__.py  apdu_fuzz.py  compare.py  fuzz.py
resimulate/commands/lpa/: __init__.py  euicc.py  notification.py  profile.py
resimulate/commands/trace/: __init__.py  record.py  replay.py
resimulate/euicc/: card.py  encoder.py  exceptions.py
resimulate/models/: euicc_info_2.py  recorded_apdu.py  recording.py
resimulate/scenarios/: __init__.py  euicc_memory_reset.py  profile_download.py
resimulate/smdp/: client.py  exceptions.py  models.py
resimulate/trace/: legacy_card.py  record.py  replay.py  tracer.py
resimulate/util/: __init__.py  apdu_highlighter.py  color.py  dummy_sim_link.py  enum_action.py  enums.py  logger.py  name_generator.py  pcsc_link.py  proactive_handler.py  tracer.py
src/: resimulate.py
(+53 files in other folders)
