[project]
name = "resimulate"
version = "0.1.0"
description = "ReSIMulate is a terminal application built for eSIM and SIM-specific APDU analysis. It captures APDU commands, saves them, and replays them to facilitate differential testing, ensuring accurate validation and debugging of SIM interactions."
authors = [
    { name = "Niklas Bittner", email = "niklas.bittner@stud.tu-darmstadt.de" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich (>=14.0.0,<15.0.0)",
    "pyshark (>=0.6,<0.7)",
    "argcomplete (>=3.6.2,<4.0.0)",
    "rich-argparse (>=1.7.0,<2.0.0)",
    "pysim @ file:///home/niklas/Documents/documents/uni/master_thesis/pysim",
    "requests (>=2.32.3,<3.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "asn1tools (>=0.167.0,<0.168.0)",
    "diskcache (>=5.6.3,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.5"
pre-commit = "^4.2.0"
pytest = "^8.3.5"

[tool.poetry.dependencies]
pysim = { develop = true }

[tool.basedpyright]
venvPath = "."
