[project]
name = "resimulate"
version = "0.1.0"
description = "ReSIMulate is a terminal application built for eSIM and SIM-specific APDU analysis. It captures APDU commands, saves them, and replays them to facilitate differential testing, ensuring accurate validation and debugging of SIM interactions."
authors = [
    { name = "Niklas Bittner", email = "niklas.bittner@stud.tu-darmstadt.de" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich (>=14.0.0,<15.0.0)",
    "argcomplete (>=3.6.2,<4.0.0)",
    "rich-argparse (>=1.7.0,<2.0.0)",
    "pysim @ git+https://github.com/Trup3s/pysim.git@resimulate",
    "pydantic (>=2.11.4,<3.0.0)",
    "asn1tools (>=0.167.0,<0.168.0)",
    "diskcache (>=5.6.3,<6.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "hypothesis (>=6.131.15,<7.0.0)",
]


[project.urls]
Homepage = "https://github.com/Trup3s/resimulate"
Repository = "https://github.com/Trup3s/resimulate"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.9"
pre-commit = "^4.2.0"
pytest = "^8.3.5"

[tool.poetry.scripts]
resimulate = "resimulate.cli:run"

[tool.semantic_release]
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
branch = "main"
changelog_file = "CHANGELOG.md"
commit_author = "github-actions <github-actions@github.com>"
major_on_zero = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches."rc"]
match = "rc"
prerelease = true
prerelease_token = "rc"

[tool.basedpyright]
venvPath = "."
